--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">Map</string>
     <string name="title_activity_maps">MapsActivity</string>
-    <string name="api_key">api_key</string>
+    <string name="api_key">AIzaSyD4zZvell1TpWVG4bJDXtI89IzxJn1Wb0w</string>
 </resources>
